--- a/DiskAnalyzer/MainPage.xaml
+++ b/DiskAnalyzer/MainPage.xaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:DiskAnalyzer.ViewModels"
              xmlns:charts="clr-namespace:Microcharts.Maui;assembly=Microcharts.Maui"
+             xmlns:converters="clr-namespace:DiskAnalyzer.Converters"
              x:Class="DiskAnalyzer.MainPage"
              Title="Analyse Disque">
 
@@ -18,6 +19,9 @@
             </VerticalStackLayout>
         </Frame>
         <Button Text="Scanner le disque C:" Command="{Binding ScanCommand}" />
+        <Button Text="Choisir un dossier" Command="{Binding PickFolderCommand}" />
+        <Label Text="{Binding SelectedFolderPath}" FontSize="12" LineBreakMode="CharacterWrap"/>
+        <Button Text="Scanner le dossier" Command="{Binding ScanCommand}" IsEnabled="{Binding SelectedFolderPath, Converter={StaticResource NullOrEmptyToBoolConverter}}" />
         <CollectionView ItemsSource="{Binding Folders}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
