--- a/DiskAnalyzer/MainPage.xaml
+++ b/DiskAnalyzer/MainPage.xaml
@@ -245,12 +245,12 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <ImageButton Grid.Column="0"
+                                Command="{Binding DeleteFolderAnalyzed}"
                                 Source="delete.png"
                                 WidthRequest="20"
                                 HeightRequest="20"
                                 VerticalOptions="Center"/>
-                                <Label Grid.Column="1" Text="Supprimer les fichiers sélectionnés" FontSize="14" VerticalOptions="Center" Margin="8,0,0,0"/>
-                                <Label Grid.Column="2" Text=">" FontSize="14" TextColor="Gray" VerticalOptions="Center"/>
+                                <Label Grid.Column="1" Text="Supprimer le dossier analysé" FontSize="14" VerticalOptions="Center" Margin="8,0,0,0"/>
                             </Grid>
 
                             <Grid Margin="0,0,0,8">
@@ -265,8 +265,8 @@
                                 WidthRequest="20"
                                 HeightRequest="20"
                                 VerticalOptions="Center"/>
-                                <Label Grid.Column="1" Text="Ouvrir dans l'explorateur" FontSize="14" VerticalOptions="Center" Margin="8,0,0,0"/>
-                                <Label Grid.Column="2" Text=">" FontSize="14" TextColor="Gray" VerticalOptions="Center"/>
+                                <Label Grid.Column="1" Text="Ouvrir dans l'explorateur le dossier analysé" FontSize="14" VerticalOptions="Center" Margin="8,0,0,0"/>
+                                
                             </Grid>
 
                             <Grid>
@@ -280,8 +280,7 @@
                                 WidthRequest="20"
                                 HeightRequest="20"
                                 VerticalOptions="Center"/>
-                                <Label Grid.Column="1" Text="Exporter le rapport" FontSize="14" VerticalOptions="Center" Margin="8,0,0,0"/>
-                                <Label Grid.Column="2" Text=">" FontSize="14" TextColor="Gray" VerticalOptions="Center"/>
+                                <Label Grid.Column="1" Text="Exporter le rapport du dossier analysé" FontSize="14" VerticalOptions="Center" Margin="8,0,0,0"/>
                             </Grid>
                         </StackLayout>
                     </Frame>
